maven spring project -> spring boot maven project